--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ body {
 h1 {
     font-family: 'Syne', sans-serif;
     font-size: 4rem;
+    color: #191970;
 }
 h2 {
     font-family: 'Syne', sans-serif;
@@ -49,4 +50,40 @@ h3 {
 }
 a {
     text-decoration: none;
+    color: white;
+    background-color: #696969;
+    border: 2px solid #191970;
+    padding: 0 1%;
+}
+
+
+/* Header */
+header {
+    background-color: #DCDCDC;
+    display: flex;
+    flex-direction: column;
+}
+.name {
+    margin: 0 1%;
+    padding: 1% 1% 0 1%;
+}
+nav {
+    display: flex;
+    margin: 0 2% 2% 2%;
+    padding: 0 2%;
+}
+nav a {
+    display: flex;
+    width: 10%;
+    justify-content: center;
+}
+
+
+/* Main image and text */
+.aboutMe {
+    display: flex;
+    padding: 1%;
+}
+.logo {
+    flex-shrink: 0;
 }
