Added styling to 500px max-width

--- a/index.css
+++ b/index.css
@@ -174,4 +174,11 @@ footer {
     .listOfProjects div {
         width: 40vw;
     }
-} 
+}
+
+/* 500px width */
+@media (max-width: 500px) {
+    .listOfProjects div {
+        width: 80vw;
+    }
+}
